terraform_code/v2-ec2.tf
provider "aws" {
    region = "us-east-1"
}
resource "aws_instance" "demo-server"{
    ami = "ami-01b14b7ad41e17ba4"
    instance_type = "t3.micro"
    key_name = "projectkey"
    vpc_security_group_ids = [aws_security_group.demo-sg.id]
}
resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "SSH Access"
  
  ingress {
    description      = "Shh access"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ssh-prot"

  }
}
